# app-a

./: .dockerignore  Cargo.toml  Dockerfile  build.rs  docker-compose.yaml
config/: app.yaml
db/migrations/: 20230712192230_setup.sql
proto/v1/: model.proto  processor-service.proto  querier-service.proto
src/: cmd.rs  config.rs  error.rs  main.rs  prelude.rs
src/api/: mod.rs  processor.rs  querier.rs  validations.rs
src/db/: functions.rs  mod.rs  model.rs  repo.rs
src/utils/: from_apis.rs  from_model.rs  from_prost.rs  mod.rs  validate.rs
