[package]
name = "app-a"
version = "0.1.0"
edition = "2021"

##########################################################################################################################################
[dependencies]

clap = { version = "4.3.5", features = ["derive", "env"] }
config = {version="0.13.1", features = ["yaml"]}
thiserror= "1.0.40"
tokio = { version = "1.28.2", features = ["full"] }
serde = "1.0.164"
serde_json = "1.0.97"
serde_derive = "1.0.164"
log = { version = "0.4.19", features = ["kv_unstable_serde"], default-features = false }
structured-logger="1.0.1"
async-trait = "0.1.68"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
prost = "0.11.9"
prost-types = "0.11.9"
futures-util = "0.3.28"

sqlx = { version="0.6.3", features = ["runtime-tokio-rustls", "postgres","macros"]}
sqlx-migrate = { version = "0.6.0" , features = ["cli","postgres"] }



[build-dependencies]
tonic-build = "0.9.2"

##########################################################################################################################################
[dev-dependencies]
mockall = "0.11.4"

##########################################################################################################################################
[package.metadata.scripts]
dockerize="docker build . -t app-a:latest"

# Run db specific docker containers only postgres and pgweb
db_docker_up="docker compose --profile=db up -d"
db_docker_down="docker compose --profile=db down"

# Run minimal docker network includes application, postgres only.
docker_up_minimal="docker compose --profile minimal up -d"
docker_down_minimal="docker compose --profile minimal down"

# Run full docker network includes application, postgres and supporting utilities
full_docker_up="docker compose --profile=db,app up --build -d"
full_docker_down="docker compose --profile=db,app down"

db_migrate="sqlx migrate run --source './db/migrations' --database-url 'postgres://postgres:postgres@localhost/postgres?sslmode=disable'"
